feat:created router handlers to get all movies, just one by id and eliminate
