# src/routes/movieRoute.ts
@@ -1,7 +1,7 @@
 
 import  express from "express"
 
-import { createMovie} from "../controllers/movieController"
+import { createMovie,getAllMovies,getMovie,deleteMovie} from "../controllers/movieController"
 import { AuthMiddleware } from "../middlewares/authMiddleware"
 
 
@@ -11,4 +11,7 @@ export const  movieRoute =  express.Router()
 
 
 movieRoute.post("/",AuthMiddleware,createMovie)
+movieRoute.get("/",AuthMiddleware,getAllMovies)
+movieRoute.get("/:id",AuthMiddleware,getMovie)
+movieRoute.delete("/:id",AuthMiddleware,deleteMovie)
 
